# playboy

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  Crank.toml  LICENSE.md  NOTE.md  README.md
.nova/: Configuration.json
assets/launcher/card-highlighted/: animation.txt
docs/: adding-roms-on-hardware.md  adding-roms-on-simulator.md  adding-roms.md  building-from-source.md
src/: lib.rs  rom_picker.rs
src/gameboy/: apu.rs  cartridge.rs  constants.rs  cpu.rs  gpu.rs  helpers.rs  interrupts.rs  joypad.rs  lcd.rs  mod.rs  registers.rs  serial_cable.rs
src/gameboy/memory/: battery_backed_ram.rs  memory.rs  mod.rs  ram.rs  rom.rs
src/gameboy/memory/mbcs/: mbc1.rs  mod.rs  none.rs
