[package]
name = "playboy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"
opt-level = 'z'
lto = true

[profile.release]
panic = "abort"
opt-level = 'z'
lto = true

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
crankstart = { path = "../../Misc/crankstart" }
crankstart-sys = { path = "../../Misc/crankstart/crankstart-sys" }
euclid = { version = "0.20.13", default-features = false, features = [ "libm" ] }
anyhow = { version = "1.0.31", default-features = false }