[package]
name = "playboy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"
opt-level = 3
lto = true

[profile.release]
panic = "abort"
opt-level = 3
lto = true

[profile.release.package.gbrs-core]
opt-level = 3
[profile.release.package.crankstart-sys]
opt-level = 3
[profile.release.package.anyhow]
opt-level = 3
[profile.release.package.euclid]
opt-level = 3
# TODO: Playboy crashes on start if crankstart is compiled as 
#   *anything* but "z", even "s". Why is that?
[profile.release.package.crankstart]
opt-level = "z"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
crankstart = { path = "./modules/crankstart" }
crankstart-sys = { path = "./modules/crankstart/crankstart-sys" }
euclid = { version = "0.20.13", default-features = false, features = [ "libm" ] }
anyhow = { version = "1.0.31", default-features = false }
gbrs-core = { path = "./modules/gbrs/core", default-features = false }
